# tmc-course

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml  windows.yml
testing/: util.py
testing/resources/valid_course/valid_part/valid_assignment_en/test/: test_solution.py
testing/resources/valid_course/valid_part/valid_assignment_en/tmc/: hmac_writer.py  result.py  utils.py
testing/resources/valid_course/valid_part/valid_assignment_fi/tmc/: __main__.py  points.py  reflect.py  runner.py
tests/: conftest.py  meta_test.py  tmc_course_test.py
tmc_course/: __main__.py  tmc_course.py
tmc_course/resources/: assignment_solution_en.template  assignment_solution_fi.template  assignment_test_en.template  assignment_test_fi.template
