[metadata]
name = tmc-course
version = 1.0.0
description = TMC course and assignment creation helper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ljleppan/tmc-course
author = Leo Leppänen
author_email = leo.leppanen@helsinki.fi
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests >= 2.28.2

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    tmc-course = tmc_course.tmc_course:main

[options.package_data]
tmc_course.resources =
    *.template

[bdist_wheel]
universal = True

[tool:pytest]
addopts = --ignore=testing/resources

[coverage:run]
plugins = covdefaults
parallel = true
omit =
    tmc_course/resources/*
    testing/resources/*

[coverage:report]
fail_under = 80

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = ^venv/|^tmc_course/resources/|^testing/resources/

[isort]
line_length = 88

[mypy]
strict = True
exclude = venv|tests|testing

[mypy-tests.*]
allow_untyped_defs = True

[tox:tox]
envlist = py311,pre-commit

[testenv]
deps = -rrequirements-dev.txt
commands =
    coverage erase
    coverage run -m pytest {posargs:tests}
    coverage combine
    coverage report

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
